# utpython_lab

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  build-all.sh  build-student.sh  preamble.py  test-all.sh  test-notebook.ipynb
1/: 1-1.ipynb  1-2.ipynb  1-3.ipynb  BUILD.bazel
2/: 2-1.ipynb  2-2.ipynb  2-3.ipynb  BUILD.bazel
3/: 3-1.ipynb  3-2.ipynb  3-3.ipynb  BUILD.bazel
4/: .gitignore  4-1.ipynb  4-2.ipynb  BUILD.bazel  preamble-4-1.py  test_input.txt  test_last_line.txt  test_newline.txt  test_num_characters.txt
5/: 5-1.ipynb  5-3.ipynb  BUILD.bazel
6/: 6-1.ipynb  6-2.ipynb  6-3.ipynb  BUILD.bazel  abcde.txt  jugemu.txt  preamble-6-2.py
7/: 7-1.ipynb  7-2.ipynb
docker/: README.md  build-docker-image.sh  cloud-run.env.template  deploy-cloud-run.sh  start-local-server.sh
docker/stage/: .gitignore  Dockerfile  nsjail.patch
python/: requirements.txt  test_integration.py
