load("@prog_edu_assistant//exercises:defs.bzl", "assignment_notebook", "autograder_tar", "student_tar")

package(
    default_visibility = ["//visibility:public"],
)

assignment_notebook(
    name = "test-notebook",
    src = "test-notebook.ipynb",
)

assignment_notebook(
    name = "test-notebook-colab",
    src = "test-notebook.ipynb",
    preamble = "preamble.py",
)

notebooks = [
    ":test-notebook",
    "//1:1-1",
    "//1:1-2",
    "//1:1-3",
    "//2:2-1",
    "//2:2-2",
    "//4:4-1",
]

colab_notebooks = [
    ":test-notebook-colab",
    "//1:1-1-colab",
    "//1:1-2-colab",
    "//1:1-3-colab",
    "//2:2-1-colab",
    "//2:2-2-colab",
    "//4:4-1-colab",
]

autograder_tar(
    name = "autograder_tar",
    deps = notebooks,
)

student_tar(
    name = "student_tar",
    deps = notebooks,
)

student_tar(
    name = "colab_student_tar",
    deps = colab_notebooks,
)
