load("@prog_edu_assistant//exercises:defs.bzl", "assignment_notebook", "autograder_tar", "student_tar")

package(
    default_visibility = ["//visibility:public"],
)

assignment_notebook(
    name = "test-notebook",
    src = "test-notebook.ipynb",
)

assignment_notebook(
    name = "test-notebook-colab",
    src = "test-notebook.ipynb",
    preamble = "preamble.py",
    preamble_metadata = '{"cellView":"form"}',
)

notebooks = [
    ":test-notebook",
    "//1:1-1",
    "//1:1-2",
    "//1:1-3",
    "//2:2-1",
    "//2:2-2",
    "//2:2-3",
    "//3:3-1",
    "//3:3-2",
    "//4:4-1",
    "//4:4-2",
    "//5:5-1",
    "//5:5-3",
    "//6:6-1",
    "//6:6-2",
]

colab_notebooks = [
    ":test-notebook-colab",
    "//1:1-1-colab",
    "//1:1-2-colab",
    "//1:1-3-colab",
    "//2:2-1-colab",
    "//2:2-2-colab",
    "//2:2-3-colab",
    "//3:3-1-colab",
    "//3:3-2-colab",
    "//4:4-1-colab",
    "//4:4-2-colab",
    "//5:5-1-colab",
    "//5:5-3-colab",
    "//6:6-1-colab",
    "//6:6-2-colab",
]

autograder_tar(
    name = "autograder_tar",
    deps = notebooks + [
	"//4:4-1_NumberOfCharacters_autograder_data_tar",
	"//4:4-1_LastLine_autograder_data_tar",
	"//4:4-1_FileUpper_autograder_data_tar",
	"//4:4-2_LastLine_autograder_data_tar",
	"//6:6-2_NumberOfLongLines_autograder_data_tar",
    ],
)

student_tar(
    name = "student_tar",
    deps = notebooks,
    # Include the sample.txt into the student notebook tar archive.
    data = [
	"//4:sample_data",
	"//6:sample_data",
    ],
)

student_tar(
    name = "colab_student_tar",
    deps = colab_notebooks,
)
