load("@prog_edu_assistant//exercises:defs.bzl", "assignment_notebook")

package(
    default_visibility = ["//visibility:public"],
)

assignment_notebook(
    name = "2-1",
    src = "2-1.ipynb",
)

assignment_notebook(
    name = "2-1-colab",
    src = "2-1.ipynb",
    preamble = "//:preamble.py",
    preamble_metadata = '{"cellView":"form"}',
    check_cell_template = "# Run this cell to check your solution.\nSubmit(\"{{.exercise_id}}\")",
)

assignment_notebook(
    name = "2-2",
    src = "2-2.ipynb",
)

assignment_notebook(
    name = "2-2-colab",
    src = "2-2.ipynb",
    preamble = "//:preamble.py",
    preamble_metadata = '{"cellView":"form"}',
    check_cell_template = "# Run this cell to check your solution.\nSubmit(\"{{.exercise_id}}\")",
)

assignment_notebook(
    name = "2-3",
    src = "2-3.ipynb",
)

assignment_notebook(
    name = "2-3-colab",
    src = "2-3.ipynb",
    preamble = "//:preamble.py",
    preamble_metadata = '{"cellView":"form"}',
    check_cell_template = "# Run this cell to check your solution.\nSubmit(\"{{.exercise_id}}\")",
)
