load("@prog_edu_assistant//exercises:defs.bzl", "assignment_notebook")

package(
    default_visibility = ["//visibility:public"],
)

assignment_notebook(
    name = "3-1",
    src = "3-1.ipynb",
)

assignment_notebook(
    name = "3-1-colab",
    src = "3-1.ipynb",
    preamble = "//:preamble.py",
    preamble_metadata = '{"cellView":"form"}',
    check_cell_template = "# Run this cell to check your solution.\nSubmit(\"{{.exercise_id}}\")",
)

assignment_notebook(
    name = "3-2",
    src = "3-2.ipynb",
)

assignment_notebook(
    name = "3-2-colab",
    src = "3-2.ipynb",
    preamble = "//:preamble.py",
    preamble_metadata = '{"cellView":"form"}',
    check_cell_template = "# Run this cell to check your solution.\nSubmit(\"{{.exercise_id}}\")",
)
