load("@prog_edu_assistant//exercises:defs.bzl", "assignment_notebook")

package(
    default_visibility = ["//visibility:public"],
)

assignment_notebook(
    name = "6-1",
    src = "6-1.ipynb",
)

assignment_notebook(
    name = "6-1-colab",
    src = "6-1.ipynb",
    preamble = "//:preamble.py",
    preamble_metadata = '{"cellView":"form"}',
    check_cell_template = "# Run this cell to check your solution.\nSubmit(\"{{.exercise_id}}\")",
)

